# resume

./: .gitignore  .mise.toml  .tdd-session.json  AGENTS.md  CLAUDE.md  MEMORY.md  W_Bisschoff_Cover_Letter.tex  cover_letter.typ  cover_letter_head_of_systems.typ  cv.typ  cv_embedded.typ  cv_enterprise.typ  cv_head_of_systems.typ  cv_infrastructure.typ  cv_systems.typ  fontsource-source-sans-3-5.2.9.tgz
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
analysis/: experience_master.md
content/: config.yaml  data.typ  experience.yaml  master-list.md  skills.yaml  star-stories.md  website-rework-handover.md  yaml-content-migration-spec.md
job_scraper_analyzer/: .gitignore  .mise.toml  README.md  pyproject.toml  search_terms.txt
job_scraper_analyzer/src/job_scraper_analyzer/: __init__.py  __main__.py  analyzer.py  cv_parser.py  database.py  models.py  scraper.py
job_scraper_analyzer/tests/integration/: __init__.py  test_cli.py  test_e2e.py
job_scraper_analyzer/tests/unit/: test_analyzer.py  test_cv_parser.py  test_database.py  test_models.py
lib/: modern-cv.typ  template.typ
pr_descriptions/: feat-001-typst-cv-migration-002-automated-release-and-cleanup.md
specs/: constitution.md  issues.jsonl
specs/001-typst-cv-migration/: data-model.md  design.md  explore.md
specs/002-yaml-content-layer/: explore.md
tests/: test_yaml_adapter.sh
website/: .gitignore  .gitmodules  .mise.toml  CLAUDE.md  CODEBASE_ANALYSIS.md  DEPLOYMENT.md  README.md  TASK_BREAKDOWN.md  astro.config.ts  netlify.toml  package-lock.json  package.json  vercel.json
(+95 files in other folders)
