[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-scraper-analyzer"
version = "0.1.0"
description = "Job scraper analyzer with AI fit rating"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.3.0",
    "rich>=13.7.0",
    "PyYAML>=6.0",
    "python-jobspy @ git+https://github.com/cullenwatson/JobSpy.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
jobspy-analyzer = "job_scraper_analyzer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/job_scraper_analyzer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
